# delprotect-rs

./: .gitignore  README.md
common/: Cargo.toml
common/src/: ioctl_codes.rs  lib.rs
delprotect-km/: .gitignore  Cargo.toml  Makefile.toml  README.md
delprotect-km/src/: lib.rs
delprotect-um/: Cargo.toml  Makefile.toml
delprotect-um/src/: error_msg.rs  main.rs
